Update UI on Mobile 3 Fixed 3

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -71,64 +71,6 @@ body {
 	padding: 0; 
 }
 
-@media (max-width: 500px) {
-
-    body {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-		position: absolute;
-    }
-
-    body #header {
-        width: 100%;
-        height: 10%;
-        background: #0f0f0f;
-        font-family: Roboto, Helvetica, Arial, sans-serif;
-        color: #ffffff;
-        position: relative;
-    }
-
-    body #header a.home {
-        width: 20%;
-        height:100%;
-        text-align: center;
-        padding-left: 20px;
-        font-size: 25px;
-    }
-
-    body .inputs {
-        position: relative;
-        top: 50%;
-        left: 15%;
-        text-align: center;
-        algin-content: center;
-    }
-
-    body .inputs a.input {
-        width: 80px;
-        height: 35px;
-        padding:1em;
-        text-align: center;
-        display:inline-block;
-        text-decoration: none !important;
-        background: #2aabd2;
-        color: #000000;
-    }
-
-    body ul .loginTable {
-        padding-top: 10px;
-    }
-
-    body #footer {
-        position:absolute;
-        bottom:0;
-        width:100%;
-        background: #0f0f0f;
-        color: #ffffff;
-    }
-}
-
 #message { 
 	background: white; 
 	max-width: 360px; 
@@ -171,7 +113,7 @@ body {
 	font-size: 13px; 
 }
 
-@media (max-width: 2000px) {
+@media (min-width: 2000px) {
 	body, #message { 
 		margin-top: 0; 
 		background: white; 
